# llama.cpp

common/: common.h
examples/llava/: CMakeLists.txt  clip.cpp  clip.h  minicpmv-cli.cpp
examples/server/: server.cpp
